--- a/exercises/Sass/style.scss
+++ b/exercises/Sass/style.scss
@@ -4,6 +4,7 @@
 
 .main {
     @include center;
+   /* @include mobile;*/
     background-color: $primary-color;
     color: color(secondcolor);
     .section{
@@ -18,6 +19,7 @@
 .section2 { 
     @include fontstyle;
     @include center;
+   /* @include mobile;*/
     background-color: $secondary-color;
     p:hover{
         color: color(firstcolor);
